# HD2025

./: README.md
backend/: app.py  environment.py  game.py  models.py  player.py  player_prompts.py  pyproject.toml  test.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/app/components/: night_role_selector.tsx  player_selector.tsx
frontend/src/app/data/: data_client.ts  socket_client.ts  test_states.ts  types.ts
frontend/src/app/game_states/: accusation.tsx  discussion.tsx  night.tsx  ready.tsx  voting.tsx
frontend/src/app/new/: page.tsx
frontend/src/app/play/: game.tsx
frontend/src/app/play/[id]/: page.tsx
frontend/src/app/play/[id]/win/[team]/: page.tsx
